# council

./: .env.example  .gitignore  ARCHITECTURE.md  CONFIGURING_MENTORS.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  USER_CONTEXT.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
app/: cli.py  config.py  main.py  mcp_server.py
app/embeddings/: providers.py  store.py
app/ingest/: __init__.py  chunker.py  db.py  dedupe.py  mentors.py
app/ingest/sources/: base.py  blog.py  newsletter.py  substack.py  twitter.py  youtube.py
app/retrieval/: __init__.py  bm25.py  fusion.py  query.py  vector.py
app/tools/: council_retrieve.py  get_user_context.py  ping.py  search.py
config/: mentors.yaml
scripts/: embed.py  ingest.py
tests/: test_blog_source.py  test_cli.py  test_council_retrieve_tool.py  test_embeddings.py  test_get_user_context.py  test_mentors_yaml.py  test_retrieval.py  test_search_tool.py  test_twitter_source.py
user_context/: README.md  audience.example.md  brand.example.md  business.example.md  constraints.example.md  questions.example.md
